# CorexAI-IDE

./: .gitignore  CHANGELOG.md  COREX_AI_FUTURE_IDEAS_70 (1).docx  CorexAI_TamFixKilavuzu.md  FUTURE_IDEAS.md  PROJECT_ANALYSIS.md  README.md  SPRINT_COMPLETION_REPORT.md  extract_panel.js  package-lock.json  package.json  split_gguf.js  task.md  tsc_errors.txt  type-errors.txt
docs/: PLUGIN-API.md  features.html  index.html  tour.html
scripts/: setup_example_plugin.ps1
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  bin_errors.txt  build_error.txt  build_errors.txt  cargo_check.json  cargo_check2.json  cargo_errors.txt  cargo_final_output.txt  cargo_history_error.txt  check_output.txt  check_results.txt  errors.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: collab.rs  commands.rs  debug.rs  docker.rs  gguf.rs  git_commands.rs  lib.rs  local_history.rs  main.rs  process_monitor.rs  rag_pipeline.rs  remote.rs  streaming.rs  testing.rs  vector_db.rs  window_manager.rs
src/components/: AIDebugAdvisor.tsx  AISettings.tsx  AccountsPanel.tsx  BottomPanel.tsx  CollabOverlay.tsx  CollaborationPanel.tsx  DebuggerAlert.tsx  DockerIntegration.tsx  EnhancedEditor.tsx  FileManager.tsx  GGUFModelBrowser.tsx  GitAutopilot.tsx  InteractiveAcademy.tsx  LivePreview.tsx  LocalHistoryTimeline.tsx  MarkersView.tsx  MergeEditor.tsx  ModelComparison.tsx  ModelRoulette.tsx  PluginMarketplace.tsx  RemoteDevelopment.tsx  SearchView.tsx  SecurityFortress.tsx  SidePanel.tsx  SplitView.tsx  StartupGenView.tsx  TaskProgressCard.tsx  TerminalPanel.tsx  VoiceControlOverlay.tsx  WelcomeScreen.tsx  chatpanel.tsx
src/hooks/: useAIBackgroundAnalysis.ts  useAppFuturism.ts  useAppLogic.ts  useChatLogic.ts  useChatMessages.ts  useCollaboration.ts  useFileEditor.ts  useGGUFBrowserLogic.ts  usePlugins.ts  useProjectManager.ts  useVoiceLogic.ts
src/platform/: commandRegistry.ts  contextKeyService.ts  keybindingService.ts  menuRegistry.ts
src/prompts/: corex_system_prompt.ts  roles.ts
src/services/: agentService.ts  agentSwarm.ts  ai.ts  aiDebugService.ts  aiEditorService.ts  aiNativeDB.ts  aiProvider.ts  aiSearchService.ts  aiTools.ts  auth.ts  collaborationService.ts  editOrchestrator.ts  editorModelManager.ts  editorOverlay.ts  fileTemplateSnippets.ts  (+22 more)
(+93 files in other folders)
