[package]
name = "corex"
version = "0.1.0"
description = "Corex - AI-powered Code Editor"
authors = ["you"]
edition = "2021"

[lib]
name = "corex_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "stream"] }
log = "0.4"
env_logger = "0.11"
sha2 = "0.10"  # 🔐 SHA256 checksum verification for secure model downloads
hex = "0.4"    # Hex encoding for hash display

# 🆕 GGUF Model Support (CPU-only by default, CUDA/Vulkan optional)
llama-cpp-2 = { version = "0.1.77", features = [] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
lazy_static = "1.4"
once_cell = "1.20"
base64 = "0.21" # 🆕 Vision AI - Base64 image decoding
rand = "0.8" # 🆕 Random sampling for temperature-based generation
sysinfo = "0.30" # 🆕 Sistem bilgisi (RAM, CPU) almak için

# 🆕 WebSocket Real-time Collaboration
tokio-tungstenite = "0.23"
uuid = { version = "1.0", features = ["v4", "serde"] }
parking_lot = "0.12"
# OAuth Support
tiny_http = "0.12"
url = "2.5"
open = "5.0"

# Vector Database & RAG Pipeline (AI-Native IDE Evolution)
chrono = { version = "=0.4.38", default-features = false, features = ["clock"] }  # Pin to avoid arrow-arith conflict
arrow-array = "52.2"
arrow-schema = "52.2"

# Tree-sitter parsers for multi-language support
tree-sitter = "0.22"
tree-sitter-typescript = "0.21"
tree-sitter-python = "0.21"
tree-sitter-rust = "0.21"
tree-sitter-go = "0.21"
lru = "0.12"  # LRU cache for AST caching
regex = "1.10"  # Regex for fallback parsing
ssh2 = "0.9"  # SSH operations
walkdir = "2"  # Recursive directory traversal
encoding_rs = "0.8"  # Character encoding
if-addrs = "0.10"  # Network interface addresses

[features]
default = []  # 💻 CPU-only by default (cross-platform compatibility)
# cuda = ["llama-cpp-2/cuda"]  # 🎮 NVIDIA GPU - optional feature
# vulkan = ["llama-cpp-2/vulkan"]  # 🌐 Evrensel GPU desteği
cuda = ["llama-cpp-2/cuda"]
vulkan = ["llama-cpp-2/vulkan"]
